Fixed z-index

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body{
     padding-top: 10px;
     padding-bottom: 10px;
     justify-content: center;
+    z-index: 1000;
 }
 .stickynav a {
     text-decoration: none;
